--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.0",
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bootstrap": "^5.0.15",
     "@types/react": "^17.0.5",
     "@types/react-bootstrap": "^0.32.25",
